Api melhoria botões

--- a/front/aula_06/front/index.html
+++ b/front/aula_06/front/index.html
@@ -71,7 +71,7 @@
                 </div>
             </div>
 
-            <input type="button" value="buscar" onclick="buscar()" class="btn btn-primary" id="btnBuscar">
+            <input type="button" value="buscar" onclick="buscar(obj_old)" class="btn btn-primary" id="btnBuscar">
 
             <input type="button" value="Cadastrar" onclick="cadastrar()" class="btn btn-primary" id="btnCadastrar">
             <input type="button" value="Alterar" onclick="alterar()" class="btn btn-primary" id="btnAlterar">
